@@ -1018,7 +1018,7 @@
 2416,0,0,0,-1,0,0,5,1,no,0,0,0,magic,0,			WM_REVERBERATION_MAGIC,Reverberation Magic
 2417,11,6,2,0,0x3,11,1,1,no,0,0,0,misc,0,		WM_DOMINION_IMPULSE,Dominion Impulse
 2418,8,6,2,-1,0x1,0,5,1,yes,0,0,0,weapon,0,	WM_SEVERE_RAINSTORM,Severe Rainstorm
-2419,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		WM_POEMOFNETHERWORLD,Poem of The Netherworld
+2419,9,6,2,0,0x1,0,5,1,yes,0,0,5,none,0,		WM_POEMOFNETHERWORLD,Poem of The Netherworld
 2420,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		WM_VOICEOFSIREN,Voice of Siren
 2421,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		WM_DEADHILLHERE,Valley of Death
 2422,8,6,2,0,0x3,11:13:15:19:21,5,1,yes,0,0,0,misc,0,		WM_LULLABY_DEEPSLEEP,Deep Sleep Lullaby
